--- a/templates/res_team/tests.html
+++ b/templates/res_team/tests.html
@@ -80,13 +80,8 @@
                         <tbody>
                             <tr>
                                 <th>Report</th>
-                                <td><button class="btn btn-primary" style="width: 100%">Open</button></td>
+                                <td><button class="btn btn-primary" style="width: 100%" onclick="open_report('{{ app.id }}', '{{  app.name }}')" >Open</button></td>
                             </tr>
-                            <tr>
-                                <th>Report</th>
-                                <td><button class="btn btn-primary" style="width: 100%">Open</button></td>
-                            </tr>
-                            
                         </tbody>
                     </table>
                 </div>
@@ -97,13 +92,8 @@
                         <tbody>
                             <tr>
                                 <th>Report</th>
-                                <td><button class="btn btn-primary" style="width: 100%">Open</button></td>
+                                <td><button class="btn btn-primary" style="width: 100%" onclick="open_report('{{ app.id }}', '{{  app.name }}')">Open</button></td>
                             </tr>
-                            <tr>
-                                <th>Report</th>
-                                <td><button class="btn btn-primary" style="width: 100%">Open</button></td>
-                            </tr>
-                            
                         </tbody>
                     </table>
                 </div>
