--- a/templates/trapview.html
+++ b/templates/trapview.html
@@ -4,126 +4,145 @@
 {% block head %}
     {{ super() }}
     <script src="{{ url_for('static', filename='trap_viewer.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/trap_viewer.css') }}">
 {% endblock %}
 
 {% block content %}
-  <table id="TrapEditorTable">
-    <tr>
-      <td rowspan=3>Pre-Event Planning</td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td rowspan=3>Pre-Declaration</td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td rowspan=4>Source Shutdown</td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td rowspan=8>Starting Target</td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td rowspan=4>Environment Verification</td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
-    <tr>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-      <td class="trap_details"></td>
-    </tr>
+    <input type="text" value="{{ app.name }}"id="app_name" hidden disabled> 
+    <div class="row">
+        <div class="col-1">
+            <button type="button" class="btn btn-secondary" style="width: 100%;" onclick="history.back()">Back</button>
+        </div>
+        <div class="col-1">
+            <button type="button" class="btn btn-success" style="width: 100%;" onclick="export_trap({{app.id}})">Export TRAP</button>
+        </div>
+        <div class="col-8">
+            <h1 class="p-2">Edit TRAP</h1>
+        </div>
+    </div>
+    <table id="TrapEditorTable" class="table table-striped table-hover">
+        <thead>
+          <tr>
+              <th style="width: 20%">Activity</th>
+              <th style="width: 70%">Task</th>
+              <th style="width: 5%" class="text-center">Planned</th>
+              <th style="width: 5%" class="text-center">Unplanned</th>
+          </tr>
+      </thead>
+      <tbody id="tbody_trap_table">
+      <tr>
+        <td rowspan=3>Pre-Event Planning</td>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+        <td rowspan=3>Pre-Declaration</td>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td rowspan=4>Source Shutdown</td>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td rowspan=8>Starting Target</td>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td rowspan=4>Environment Verification</td>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+      <tr>
+        <td class="trap_details"></td>
+        <td class="text-center"><input type="checkbox" id="yes" name="fav_language" value="yes"></td>
+        <td class="text-center"><input type="checkbox" id="no" name="fav_language" value="no"></td>
+      </tr>
+    </tbody>
   </table>
 {% endblock %}
