--- a/templates/app_team/dash.html
+++ b/templates/app_team/dash.html
@@ -13,7 +13,7 @@
     <div class="row text-center">
         <span class="col-2"></span>
         <h1 class="col-8">Application Team Dashboard</h1>
-        <span class="col-2" id="status-bar">App Status:<br><span class="badge bg-success" id="status-text">Testing Compliant</span></span>
+        <span class="col-2" id="status-bar">App Status:<br><span class="badge bg-success text-wrap" id="status-text">Testing Compliant</span></span>
     </div>
     <hr>
     <div class="container">
@@ -23,7 +23,7 @@
         </div>
         <div id="mainBody">
           <div class ="row">
-            <div class="col-6"> 
+            <div class="col-lg-6 pb-2"> 
                 <div class="card card-body">
                     <h3>Applications</h3>
                     <table class="table table-striped table-hover" id="application_table">
@@ -38,7 +38,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 pb-2">
               <!-- upcoming tests_table -->
                 <div class="card card-body">
                     <table class="table table-striped table-hover">
