--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,16 +4,25 @@
         {% block head %}
         <title>{% block title %}{% endblock %}</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% endblock %}
     </head>
     <body>
         {% block navbar %}
-        <nav class="navbar navbar-expand-lg" style="background-color: #283b4d !important">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #283b4d !important">
             <div class="container-fluid">
                 <a class="navbar-brand" style="color: #ffffff" href="/">DWK Resiliency Management</a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     {% block navbarContents %}{% endblock %}
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                          <a class="nav-link" aria-current="page" href="/">Home</a>
+                        </li>
+                    </ul>
                     <div class="d-flex">
                         <button class="btn btn-primary ms-2 position-relative" data-bs-toggle="modal" data-bs-target="#notifModal" onclick="show_notifs()">
                             Notifications
