--- a/templates/op_team/dash.html
+++ b/templates/op_team/dash.html
@@ -5,7 +5,7 @@
     <div class="row text-center">
         <span class="col-2"></span>
         <h1 class="col-8">Operate Team Dashboard</h1>
-        <span class="col-2" id="status-bar">App Status:<br><span class="badge bg-success" id="status-text">Testing Compliant</span></span>
+        <span class="col-2" id="status-bar">App Status:<br><span class="badge bg-success text-wrap" id="status-text">Testing Compliant</span></span>
     </div>
     <hr>
     <div class="d-flex justify-content-center">
@@ -18,7 +18,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-lg-7 pb-2">
                 <div class="card card-body">
                     <h3>Overview Application Entries</h3>
                     <table class="table table-striped table-hover">
@@ -59,7 +59,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col-lg-5 pb-2">
                 <div class="card card-body">
                     <h3>Application Upcoming Tests</h3>
                     <table class="table table-striped table-hover">
