--- a/templates/res_team/dash.html
+++ b/templates/res_team/dash.html
@@ -14,96 +14,107 @@
     <hr>
     <div class="container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-lg-7 pb-2">
                 <div class="card card-body">
                     <h3>Overview Application Entries Report</h3>
                     <div class="row">
                         <div class="col-4">
-                            <span class="badge bg-success">Testing Compliant <span>{{ compliant }}</span></span>
+                            <span class="badge bg-success text-wrap">Testing Compliant <span>{{ compliant }}</span></span>
                         </div>
                         <div class="col-4">
-                            <span class="badge bg-warning">Awaiting Approval <span>x</span></span>
+                            <span class="badge bg-warning text-wrap">Awaiting Approval <span>x</span></span>
                         </div>
                         <div class="col-4">
-                            <span class="badge bg-danger">Testing Non-Compliant <span>{{ noncompliant }}</span></span>
+                            <span class="badge bg-danger text-wrap">Testing Non-Compliant <span>{{ noncompliant }}</span></span>
                         </div>
                     </div>
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th style="width: 4vw">App ID</th>
                                 <th>App Name</th>
-                                <th style="width: 10vw">Compliance</th>
-                                <th style="width: 6vw"></th>
+                                <th style="max-width: 10vw"></th>
+                                <th style="max-width: 6vw"></th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for app in apps %}
                                 <tr onclick="open_details('{{app[0][0]}}')" class="align-middle">
-                                    <td>{{app[0][0]}}</td> <!-- App ID -->
-                                    <td>{{app[0][1]}}</td> <!-- App Name -->
+                                    <td class="text-wrap">{{app[0][1]}}</td> <!-- App Name -->
                                     {% if app[1] %}
-                                        <td><span class="badge bg-success">Compliant</span></td>
+                                        <td><span class="badge bg-success text-wrap">Compliant</span></td>
                                     {% else %}
-                                        <td><span class="badge bg-danger">Non-Compliant</span></td>
+                                        <td><span class="badge bg-danger text-wrap">Non-Compliant</span></td>
                                     {% endif %}
-                                    <td><button style="width: 100%;" class="btn btn-sm btn-primary">Open</button></td> <!-- App Button-->
+                                    <td><button style="width: 100%;" class="btn btn-sm btn-primary"><i class="bi bi-arrow-up-right-square-fill"></i></button></td> <!-- App Button-->
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
             </div>
-            <div class="col-5">
-                <div class="card card-body">
-                    <h3>Datacenter Tests</h3>
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th>Test ID</th>
-                                <th>Date</th>
-                                <th>Complete</th>
-                                <th>Result</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for dc_test in dc_tests %}
-                                <tr onclick="alert('Details on test {{dc_test.id}}')">
-                                    <th>{{ dc_test.id }}</th>
-                                    <td>{{ dc_test.date }}</td>
-                                    {% if dc_test.complete %}
-                                        <td><span class="badge bg-success">Complete</span></td>
-                                        {% if dc_test.result %}
-                                            <td><span class="badge bg-success">Success</span></td>
-                                        {% else %}
-                                            <td><span class="badge bg-danger">Failure</span></td>    
-                                        {% endif %}
-                                    {% else %}
-                                        <td><span class="badge bg-danger">Not Complete</span></td>   
-                                        <td><span class="badge bg-info">N/a</span></td>
-                                    {% endif %}
-                                    <td><button class="btn btn-primary btn-sm">Details</button></td>
+            <div class="col-lg-5 pb-2">
+                <div class="pb-2">
+                    <div class="card card-body">
+                        <h3>Datacenter Tests</h3>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Complete</th>
+                                    <th>Result</th>
+                                    <th></th>
                                 </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                {% for dc_test in dc_tests %}
+                                    <tr onclick="alert('Details on test {{dc_test.id}}')">
+                                        <td>{{ dc_test.date }}</td>
+                                        {% if dc_test.complete %}
+                                            <td><span class="badge bg-success text-wrap">Complete</span></td>
+                                            {% if dc_test.result %}
+                                                <td><span class="badge bg-success text-wrap">Success</span></td>
+                                            {% else %}
+                                                <td><span class="badge bg-danger text-wrap">Failure</span></td>    
+                                            {% endif %}
+                                        {% else %}
+                                            <td><span class="badge bg-danger text-wrap">Not Complete</span></td>   
+                                            <td><span class="badge bg-info text-wrap">N/a</span></td>
+                                        {% endif %}
+                                        <td><button class="btn btn-primary btn-sm"><i class="bi bi-arrow-up-right-square-fill"></i></button></td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <br>
-                <div class="card card-body">
-                    <h3>Standalone Tests</h3>
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th>Test ID</th>
-                                <th>Date</th>
-                                <th>Complete</th>
-                                <th>Result</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                    </table>
-                    <div class="alert alert-info">Not Implemented<div>
+                <div class="pt-2">
+                    <div class="card card-body">
+                        <h3>Standalone Tests</h3>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Test ID</th>
+                                    <th>Date</th>
+                                    <th>Complete</th>
+                                    <th>Result</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr onclick="alert('Details on Standalone 12')">
+                                    <td>12</td>
+                                    <td>2023-05-12</td>
+                                    <td><span class="badge bg-success text-wrap">Complete</span></td>
+                                    <td><span class="badge bg-success text-wrap">Success</span></td>
+                                </tr>
+                                <tr  onclick="alert('Details on Standalone 14')">
+                                    <td>14</td>
+                                    <td>2022-08-26</td>
+                                    <td><span class="badge bg-danger text-wrap">Not Complete</span></td>   
+                                    <td><span class="badge bg-danger text-wrap">Failure</span></td>    
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
