--- a/templates/res_team/tests.html
+++ b/templates/res_team/tests.html
@@ -10,10 +10,10 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-2">
+            <div class="col-lg-2 pb-2">
                 <button type="button" class="btn btn-secondary" style="width: 100%;" onclick="history.back()">Back</button>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8 pb-2">
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="searchBox" placeholder="Name of Application" value="{{ app.name }}">
                     <label for="floatingInput">Search</label>
@@ -24,7 +24,7 @@
     <hr>
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4 pb-2">
                 <div class="card card-body">
                     <h3 class="card-title">App Info</h3>
                     <table class="table table-striped table-hover">
@@ -73,7 +73,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8 pb-2">
                 <div class="card card-body">
                     <h3 class="card-title">Testing Compliance Reports</h3>
                     <table class="table table-striped table-hover">
